language/move-lang/tests/move_check/parser/global_access.exp
error[E01002]: unexpected token
   ┌─ tests/move_check/parser/global_access.move:13:24
   │
13 │         let _ : bool = ::exists<Self::R>(0x0);
   │                        ^^
   │                        │
   │                        Unexpected '::'
   │                        Expected an expression term

